Add text when user login with google

--- a/web/config/locales/pt-BR.yml
+++ b/web/config/locales/pt-BR.yml
@@ -1,5 +1,8 @@
 ---
 pt-BR:
+  devise:
+    omniauth_callbacks:
+      success: 'Login feito com sucesso!'
   activerecord:
     errors:
       messages:
