--- a/web/config/locales/pt-BR.yml
+++ b/web/config/locales/pt-BR.yml
@@ -38,16 +38,17 @@ pt-BR:
     - Dez
     day_names:
     - Domingo
-    - Segunda-feira
-    - Terça-feira
-    - Quarta-feira
-    - Quinta-feira
-    - Sexta-feira
+    - Segunda
+    - Terça
+    - Quarta
+    - Quinta
+    - Sexta
     - Sábado
     formats:
       default: "%d/%m/%Y"
       long: "%d de %B de %Y"
       short: "%-d de %b"
+      week: "%A"
     month_names:
     -
     - Janeiro
