Adjust text of signup alert

--- a/web/config/locales/devise.pt-BR.yml
+++ b/web/config/locales/devise.pt-BR.yml
@@ -34,14 +34,14 @@ pt-BR:
       updated_not_active: "Sua senha foi alterada com sucesso."
     registrations:
       destroyed: "Sua conta foi cancelada com sucesso. Esperamos vê-lo novamente em breve."
-      signed_up: "Login efetuado com sucesso. Se não foi autorizado, a confirmação será enviada por e-mail."
+      signed_up: "Conta criada com sucesso! Bem vindo ao Alegreme 🤙"
       signed_up_but_inactive: "Você foi cadastrado com sucesso. No entanto, não foi possível efetuar login, pois sua conta não foi ativada."
       signed_up_but_locked: "Você foi cadastrado com sucesso. No entanto, não foi possível efetuar login, pois sua conta está bloqueada."
       signed_up_but_unconfirmed: "Uma mensagem com um link de confirmação foi enviada para o seu endereço de e-mail. Por favor, abra o link para confirmar a sua conta."
       update_needs_confirmation: "Você atualizou a sua conta com sucesso, mas o seu novo endereço de e-mail precisa ser confirmado. Por favor, acesse-o e clique no link de confirmação que enviamos."
       updated: "Sua conta foi atualizada com sucesso."
     sessions:
-      signed_in: "Login efetuado com sucesso!"
+      signed_in: "Login efetuado com sucesso! 🤙"
       signed_out: "Saiu com sucesso."
       already_signed_out: "Saiu com sucesso."
     unlocks:
